<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>wetnet</artifactId>
        <groupId>it.crismatica</groupId>
        <version>1.0-SNAPSHOT</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>

    <artifactId>wetnet-web</artifactId>
    <version>1.0.19-SNAPSHOT</version>
    <packaging>war</packaging>
    <name>wetnet-web</name>

    <properties>
        <jdk.version>1.8</jdk.version>
        <spring.version>5.2.7.RELEASE</spring.version>
        <spring.security.version>3.2.5.RELEASE</spring.security.version>
        <jstl.version>1.2</jstl.version>
        <junit.version>4.11</junit.version>
        <ibatis.sqlmap.version>2.3.4.726</ibatis.sqlmap.version>
        <mysql.connector.version>5.1.32</mysql.connector.version>
        <commons.dbcp.version>1.4</commons.dbcp.version>
        <maven.compiler.version>3.1</maven.compiler.version>
        <maven.resources.version>2.6</maven.resources.version>
        <maven.war.version>2.4</maven.war.version>
        <slf4j.version>1.6.1</slf4j.version>
        <jackson.core.version>2.4.3</jackson.core.version>
        <jackson.mapper.version>1.9.13</jackson.mapper.version>
        <commons-fileupload.version>1.3.1</commons-fileupload.version>
        <commons-io.version>2.4</commons-io.version>
        <geotools.version>15.1</geotools.version>
    </properties>

    <repositories>
        <repository>
            <id>osgeo</id>
            <name>Open Source Geospatial Foundation Repository</name>
            <url>http://download.osgeo.org/webdav/geotools/</url>
        </repository>
    </repositories>

    <dependencies>

        <dependency>
            <groupId>org.json</groupId>
            <artifactId>json</artifactId>
            <version>20160810</version>
        </dependency>
        <dependency>
            <groupId>org.codehaus.mojo</groupId>
            <artifactId>properties-maven-plugin</artifactId>
            <version>1.0-alpha-2</version>
        </dependency>

        <!-- Spring 3 dependencies -->
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-core</artifactId>
            <version>${spring.version}</version>
        </dependency>

        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-web</artifactId>
            <version>${spring.version}</version>
        </dependency>

        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-webmvc</artifactId>
            <version>${spring.version}</version>
        </dependency>

        <!-- Spring Security dependencies -->
        <dependency>
            <groupId>org.springframework.security</groupId>
            <artifactId>spring-security-core</artifactId>
            <version>${spring.security.version}</version>
        </dependency>

        <dependency>
            <groupId>org.springframework.security</groupId>
            <artifactId>spring-security-web</artifactId>
            <version>${spring.security.version}</version>
        </dependency>

        <dependency>
            <groupId>org.springframework.security</groupId>
            <artifactId>spring-security-config</artifactId>
            <version>${spring.security.version}</version>
        </dependency>

        <dependency>
            <groupId>org.springframework.security</groupId>
            <artifactId>spring-security-taglibs</artifactId>
            <version>${spring.security.version}</version>
        </dependency>

        <!-- Spring Security LDAP dependency -->
        <dependency>
            <groupId>org.springframework.security</groupId>
            <artifactId>spring-security-ldap</artifactId>
            <version>${spring.security.version}</version>
        </dependency>

        <!-- Apache Commons FileUpload dependency -->
        <dependency>
            <groupId>commons-fileupload</groupId>
            <artifactId>commons-fileupload</artifactId>
            <version>${commons-fileupload.version}</version>
        </dependency>

        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>${commons-io.version}</version>
        </dependency>

        <!-- jstl dependency -->
        <dependency>
            <groupId>javax.servlet</groupId>
            <artifactId>jstl</artifactId>
            <version>${jstl.version}</version>
        </dependency>

        <dependency>
            <groupId>com.google.visualization</groupId>
            <artifactId>visualization-datasource</artifactId>
            <version>1.1.1</version>
        </dependency>

        <dependency>
            <groupId>javax.servlet</groupId>
            <artifactId>servlet-api</artifactId>
            <version>2.5</version>
            <scope>provided</scope>
        </dependency>

        <!-- junit dependency -->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>it.crismatica</groupId>
            <artifactId>wetnet-business</artifactId>
            <version>1.0.19-SNAPSHOT</version>
        </dependency>


        <dependency>
            <groupId>org.geotools</groupId>
            <artifactId>gt-shapefile</artifactId>
            <version>${geotools.version}</version>
        </dependency>
        <dependency>
            <groupId>org.geotools</groupId>
            <artifactId>gt-swing</artifactId>
            <version>${geotools.version}</version>
        </dependency>
        <dependency>
            <groupId>org.geotools</groupId>
            <artifactId>gt-epsg-hsql</artifactId>
            <version>${geotools.version}</version>
        </dependency>

    </dependencies>

    <build>
        <finalName>wetnet-web-${project.version}</finalName>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven.compiler.version}</version>
                <configuration>
                    <source>${jdk.version}</source>
                    <target>${jdk.version}</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-war-plugin</artifactId>
                <version>${maven.war.version}</version>
                <configuration>
                    <webResources>
                        <resource>
                            <directory>${basedir}/src/main/webapp/WEB-INF</directory>
                            <filtering>true</filtering>
                            <targetPath>WEB-INF</targetPath>
                            <includes>
                                <include>**/*.xml</include>
                            </includes>
                        </resource>
                    </webResources>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.mortbay.jetty</groupId>
                <artifactId>maven-jetty-plugin</artifactId>
                <version>6.1.25</version>
                <configuration>
                    <contextPath>/</contextPath>
                    <connectors>
                        <!--<connector implementation="org.mortbay.jetty.nio.SelectChannelConnector">-->
                        <connector implementation="org.mortbay.jetty.bio.SocketConnector">
                            <port>8889</port>
                            <maxIdleTime>30000</maxIdleTime>
                        </connector>
                        <connector implementation="org.mortbay.jetty.security.SslSocketConnector">
                            <port>8445</port>
                            <maxIdleTime>60000</maxIdleTime>
                            <keystore>${basedir}/src/main/resources/ssl_test.keystore</keystore>
                            <password>youagent</password>
                            <keyPassword>youagent</keyPassword>
                        </connector>
                    </connectors>
                    <systemProperties>
                        <systemProperty>
                            <name>JAVA_OPTS</name>
                            <value>-Xms256m -Xmx512m -XX:PermSize=256m -XX:MaxPermSize=256m
                                -XX:+CMSClassUnloadingEnabled -XX:+CMSPermGenSweepingEnabled</value>
                        </systemProperty>
                    </systemProperties>
                    <stopPort>9966</stopPort>
                    <stopKey>stop</stopKey>
                </configuration>
            </plugin>

        </plugins>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
    </build>

</project>